# gambas3

./: .gitlab-ci.yml  AUTHORS  Makefile.am  TODO  VERSION  acinclude.m4  component.am  configure.ac  version.m4
app/: Makefile.am  configure.ac
app/desktop/: gambas3.appdata.xml  gambas3.desktop
app/examples/Drawing/Painting/: .project
app/examples/Games/GNUBoxWorld/.lang/: cs.po  es_AR.po
app/examples/Image/Lighttable/: .project
app/examples/Printing/Printing/: .project
app/examples/Printing/Printing/.src/: FMain.form
app/man/: Makefile.am  gambas3.1  gbs3.1  gbw3.1
app/src/: INSTALL
app/src/gambas-wiki/: .project
app/src/gambas-wiki/.lang/: fr.po  it.po  pt_BR.po  zh.po
app/src/gambas-wiki/.src/: Main.module  Wiki.webpage
app/src/gambas3/: .project  support.txt  usage
app/src/gambas3/.hidden/font/: GambasBold-12.bdf  GambasBold-12.sfd  GambasBold-13.sfd  GambasBold-16.bdf  GambasBold-16.sfd  GambasBold.sfd  GambasMedium-12.bdf  GambasMedium-12.sfd  GambasMedium-13.bdf  GambasMedium-13.sfd  (+9 more)
app/src/gambas3/.lang/: ca.po  cs.po  de.po  es.po  es_ES.po  fa.po  fr.po  it.po  ja.po  nl.po  pt.po  pt_BR.po  ru.po  sv.po  zh.po  zh_TW.po
app/src/gambas3/.src/: FMain.form  FSave.form  MTheme.module  Project.module  Save.module
app/src/gambas3/font/: GambasBold-12.otb  GambasBold-13.bdf  GambasBold-13.otb  GambasBold-16.bdf  GambasBold-16.otb  GambasMedium-12.bdf  GambasMedium-12.otb  GambasMedium-13.bdf  GambasMedium-13.otb  GambasMedium-16.bdf  GambasMedium-16.otb  gambasb12.otb  gambasb13.otb  gambasb16.otb  gambasr12.otb  gambasr13.otb  gambasr16.otb
app/src/gambas3/help/: class-help.html  component-help.html  property-help.html  symbol-help.html
app/src/gambas3/layout/: $compact.layout  $default.layout
app/src/gambas3/theme/: zen
app/src/gb.wiki/: .project
app/src/gb.wiki/.lang/: it.po  pt_BR.po
app/src/gbs3/: .project  .test  TestApp  TestAppCompiled  TestAppInclude  TestAppInclude2  TestAppWithMain  TestAppWithMainCompiled  TestFile.info  TestFileFail.info  WebPageCompiled  WebPageExpected  WebPageTest  usage-gbs  usage-gbw
app/src/gbs3/.hidden/: CHANGELOG
app/src/gbs3/.lang/: de.po  en_US.po  fr.po  it.po
app/src/gbs3/.src/: MMain.module  MServerPage.module
app/src/gbt3/: .project
app/src/gbt3/.src/: Main.module
app/src/gbt3/testexample/: .project  .test
app/template/console/.lang/: fr.po  zh.po
app/template/database/.lang/: fr.po  zh.po
app/template/graphical/.lang/: fr.po  ru.po  zh.po
app/template/gtk2/.lang/: fr.po  zh.po
app/template/gtk3/.lang/: fr.po  zh.po
app/template/qt/.lang/: fr.po  zh.po
app/template/sdl/.lang/: fr.po  zh.po
app/template/web/.lang/: fr.po  zh.po
app/template/webform/.lang/: fr.po  zh.po
app/template/~subversion/.lang/: fr.po  zh.po
gb.db.mysql/: configure.ac
gb.db.mysql/src/: main.c
gb.dwg/: configure.ac  relink.sh  version.m4
gb.dwg/src/: Makefile.am  c_dwg.c  c_dwg.h  c_dwg_gen.c  c_ents.c  c_ents.h  gb.dwg.component  main.c  main.h  names.inc
gb.gtk3/: configure.ac
gb.gtk3/src/: Makefile.am  gb.gtk.patch.h  gb.gtk.platform.h  gdialog.cpp  main.cpp  main.h
gb.gtk3/src/wayland/: Makefile.am  main.c  main.h
gb.gtk3/src/webview/: Makefile.am  c_websettings.c  c_websettings.h  c_webview.c  c_webview.h  gb.gtk3.webview.component  main.c  main.h
gb.gtk3/src/x11/: Makefile.am  main.c  main.h  x11.h
gb.ncurses/: configure.ac
gb.ncurses/src/: c_screen.c  c_screen.h
gb.pdf/: configure.ac
gb.pdf/src/: CPdfDocument.cpp  CPdfDocument.h  gb.pdf.component  main.cpp
gb.poppler/: Makefile.am  configure.ac
gb.poppler/src/: Makefile.am  c_pdf_document.cpp  c_pdf_document.h  gb.poppler.component  main.cpp  main.h
gb.qt4/src/webview/: Makefile.am  c_websettings.cpp  c_websettings.h  c_webview.cpp  c_webview.h  main.cpp
gb.qt5/src/wayland/: Makefile.am  main.cpp  main.h
gb.qt5/src/webview/: Makefile.am  c_websettings.cpp  c_websettings.h  c_webview.cpp  c_webview.h  gb.qt5.webview.component  main.cpp  main.h
gb.qt5/src/x11/: Makefile.am  gb.qt5.x11.component  main.cpp  main.h  x11.c  x11.h
main/: Makefile.am  configure.ac
main/gbc/: gba.c  gbc.c  gbc_class.c  gbc_class.h  gbc_compile.c  gbc_compile.h  gbc_dump.c  gbc_form.c  gbc_header.c  gbc_help.c  gbc_output.c  gbc_read.c  gbc_trans.h  gbc_trans_code.c  gbc_trans_ctrl.c  gbc_trans_expr.c  gbc_trans_subr.c  gbi.c
main/gbx/: Makefile.am  gb.jit.h  gb_error.c  gb_error.h  gbx.c  gbx_api.c  gbx_api.h  gbx_c_application.c  gbx_c_array.c  gbx_c_array.h  gbx_c_class.c  gbx_c_file.c  gbx_c_file.h  gbx_c_gambas.c  gbx_c_process.c  gbx_c_string.c  gbx_c_system.c  gbx_c_task.c  gbx_c_timer.c  gbx_class.c  gbx_class.h  gbx_class_load.c  gbx_compare.c  gbx_component.c  gbx_date.c  gbx_eval.c  gbx_exec.c  gbx_exec.h  gbx_exec_loop.c  gbx_exec_operator.c  gbx_extern.c  gbx_jit.c  gbx_jit.h  gbx_local.c  gbx_local.h  gbx_object.c  gbx_object.h  gbx_project.c  gbx_project.h  gbx_signal.c  (+28 more)
main/lib/: Makefile.am  gb.component
main/lib/db/: CConnection.c  sqlite.c
main/lib/db/gb.db/: .component  .project
main/lib/debug/: CDebug.c  debug.c  debug.h  gb.debug.h
main/lib/eval/: c_highlight.c  eval_analyze.c  eval_read.c  gb.eval.h
main/lib/geom/: crect_temp.h
main/lib/gui/: Makefile.am  gb_gui_test_temp.h  main.c
main/lib/gui.opengl/: main.c
main/lib/gui.qt/: Makefile.am  gb_gui_test_temp.h  main.c
main/lib/gui.qt.opengl/: main.c
main/lib/gui.qt.webkit/: main.c
main/lib/gui.webview/: Makefile.am  gb.gui.webview.component  main.c  main.h
main/lib/image/: CImage.c  c_color.c  c_color.h  gb.image.h  image.c  main.c
main/lib/jit/: jit.c  jit_body.c
main/lib/jit/gb.jit/: .component  .project  jit.h
main/lib/test/: Makefile.am  gb.test.component  main.c  main.h
main/lib/test/gb.test/: .component  .project  .test  .tests  taskell.md
main/man/: Makefile.am  gba3.1  gbc3.1  gbh3.1  gbi3.1  gbr3.1  gbx3.1
main/share/: gambas.h  gb_arch_temp.h  gb_code.h  gb_code_temp.h  gb_file_temp.h  gb_reserved.h  gb_reserved_keyword.h  gb_reserved_temp.h  gbc_trans_common.h
main/tools/gbh3/: .project
(+474 files in other folders)
