COMPONENT = gb.gui.webview
include $(top_srcdir)/component.am

gblib_LTLIBRARIES = gb.gui.webview.la

gb_gui_webview_la_LIBADD = 
gb_gui_webview_la_LDFLAGS = -module @LD_FLAGS@
gb_gui_webview_la_CFLAGS = -I$(top_srcdir)/share -I$(top_srcdir)/gbx @INCLTDL@ $(AM_CFLAGS)

gb_gui_webview_la_SOURCES = main.h main.c

